Tue Dec 14 14:24:15 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_io.rb (make_tempfile): change the prefix from 'foo'
	  to 'test_io' because the old one is meaningless and inconvenient.

	* test/ruby/test_io.rb (test_binmode_after_closed): the temporary file
	  maked by make_temfile is already closed.

Tue Dec 14 13:52:19 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_io.rb (test_flush_in_finalizer[12]): should close
	  temporary file because it's only used for taking pathname and
	  unlinking the file after the end of the test (in GC phase).

Tue Dec 14 13:34:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_s_open): should close the IO if some error
	  occurs in initilizing.

Tue Dec 14 13:04:16 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTPRequest#send_request_body_data):
	  set binmode to tempfile.

Tue Dec 14 12:55:46 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/zlib/test_zlib.rb (*): should close files associated with zlib.

Tue Dec 14 11:30:17 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_argf.rb (test_inplace_rename_impossible): unlink
	  the renamed temporary file on no_safe_rename platforms.

	* test/ruby/test_argf.rb (test_readlines_limit_0,
	  test_each_line_limit_0): should close argf because the associated
	  Tempfile object cannot unlink the temporary file when it's gc'ed
	  on some platforms (Windows, etc.)

Tue Dec 14 11:27:07 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/minitest/unit.rb (Minitest::Unit#_run_suite): split test
	  name and its time. Thiw allows to know test's name when you are
	  running tests and meet a test which spends long time at realtime.

Tue Dec 14 11:25:20 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: Add -Werror=declaration-after-statement to default
	  warning flag. If you are using GCC, this flag is useful to
	  prevent breaking VC build.

Tue Dec 14 10:25:57 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
