@@ -1,3 +1,8 @@
+Tue Dec 14 15:03:46 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* test/ruby/test_io.rb (test_reopen, test_reinitialize): should close
+	  the temporay files.
+
 Tue Dec 14 14:24:15 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* test/ruby/test_io.rb (make_tempfile): change the prefix from 'foo'
